[package]
name = "super-full-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homedir = "0.2.1"
ssh2 = "0.9.4"
ssh2-config = "0.2.2"
regex = "1.10.2"
dotenv = "0.15.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
